Feedback: Flatten nested CSS where possible
- Prefer setting CSS class overrides on individual EUI components, not on a top-level page

+ Change CSS class casing from kebab-case to camelCase to better match EUI/Kibana

+ Remove unnecessary .euiPageContentHeader margin-bottom override by changing the panelPaddingSize of euiPageContent

+ Decrease engine overview table padding on mobile

--- a/x-pack/plugins/enterprise_search/public/applications/app_search/components/empty_states/empty_states.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/app_search/components/empty_states/empty_states.scss
@@ -7,15 +7,13 @@
 /**
  * Empty/Error UI states
  */
-.empty-state {
-  .euiPageContent {
-    min-height: 450px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
+.emptyState {
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  .euiEmptyPrompt > .euiIcon {
+  &__prompt > .euiIcon {
     margin-bottom: $euiSizeS;
   }
 }
