removing caret-color

--- a/x-pack/plugins/lens/public/xy_visualization/_xy_expression.scss
+++ b/x-pack/plugins/lens/public/xy_visualization/_xy_expression.scss
@@ -14,3 +14,8 @@
 .lnsConfigPanel__colorLayout {
   max-width: 172px;
 }
+
+.lnsConfigPanel__colorTextField {
+  caret-color: transparent;
+  cursor: pointer;
+}
