--- a/src/legacy/ui/public/styles/_styling_constants_v7dark.scss
+++ b/src/legacy/ui/public/styles/_styling_constants_v7dark.scss
@@ -1,7 +1,12 @@
-// EUI Dark global scope
-// Note that fonts are loaded directly by src/legacy/ui/ui_render/views/chrome.pug
+// v7dark global scope
+//
+// prepended to all .scss imports (from JS, when v7dark theme selected) and
+// legacy uiExports.styleSheetPaths when any dark theme is selected
 
 @import '@elastic/eui/src/themes/eui/eui_colors_dark';
-@import '@elastic/eui/src/global_styling/index';
+
+@import '@elastic/eui/src/global_styling/functions/index';
+@import '@elastic/eui/src/global_styling/variables/index';
+@import '@elastic/eui/src/global_styling/mixins/index';
 
 @import './mixins';
