--- a/src/legacy/ui/public/styles/_styling_constants_v8dark.scss
+++ b/src/legacy/ui/public/styles/_styling_constants_v8dark.scss
@@ -1,7 +1,11 @@
-// EUI Amsterdam Light global scope
-// Note that fonts are loaded directly by src/legacy/ui/ui_render/views/chrome.pug
+// v8dark global scope
+//
+// prepended to all .scss imports (from JS, when v8dark theme selected)
 
 @import '@elastic/eui/src/themes/eui-amsterdam/eui_amsterdam_colors_dark';
-@import '@elastic/eui/src/themes/eui-amsterdam/global_styling/index';
+
+@import '@elastic/eui/src/eui-amsterdam/global_styling/functions/index';
+@import '@elastic/eui/src/eui-amsterdam/global_styling/variables/index';
+@import '@elastic/eui/src/eui-amsterdam/global_styling/mixins/index';
 
 @import './mixins';
