Cleanup styles and move to kibana_legacy

--- a/src/legacy/ui/public/_index.scss
+++ b/src/legacy/ui/public/_index.scss
@@ -1,5 +1,5 @@
 // Legacy styles to come before all
-@import './styles/_legacy/index';
+@import 'src/plugins/kibana_legacy/public/styles/index';
 
 // Prefix all styles with "kbn" to avoid conflicts.
 // Examples
