Create basic table template

--- a/src/plugins/vis_type_table/public/index.scss
+++ b/src/plugins/vis_type_table/public/index.scss
@@ -8,3 +8,10 @@
 @import './agg_table/index';
 @import './paginated_table/index';
 @import './table_vis';
+
+.tbvChart {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 100%;
+  overflow: auto;
+}
