[kbn/optimizer] only build specified themes (#70389)
Co-authored-by: spalger <spalger@users.noreply.github.com>
Co-authored-by: Elastic Machine <elasticmachine@users.noreply.github.com>
Co-authored-by: cchaos <caroline.horn@elastic.co>
# Conflicts:
#	packages/kbn-optimizer/src/integration_tests/__snapshots__/basic_optimization.test.ts.snap

--- a/src/legacy/ui/public/styles/_globals_v7light.scss
+++ b/src/legacy/ui/public/styles/_globals_v7light.scss
@@ -1,8 +1,9 @@
-// EUI global scope
+// v7light global scope
+//
+// prepended to all .scss imports (from JS, when v7light theme selected) and
+// legacy uiExports.styleSheetPaths when any dark theme is selected
 
 @import '@elastic/eui/src/themes/eui/eui_colors_light';
-
-// Note that fonts are loaded directly by src/legacy/ui/ui_render/views/chrome.pug
 
 @import '@elastic/eui/src/global_styling/functions/index';
 @import '@elastic/eui/src/global_styling/variables/index';
