--- a/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
+++ b/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
@@ -25,15 +25,13 @@
   }
 
   &__textContainer {
-    padding: 4px;
-    border-radius: 2px;
-
-    transition: border-color 0.3s;
-    border: 2px solid transparent;
+    cursor: text;
+    border-bottom: 1px dashed transparent;
 
     &--notEditing {
+      border-bottom: 1px dashed $euiColorLightShade;
       &:hover {
-        border: 2px solid $euiColorLightShade;
+        border-color: $euiColorMediumShade;
       }
     }
   }
@@ -46,8 +44,8 @@
   }
 
   &__textInput {
-    height: 21px;
-    min-width: 150px;
+    height: 24px;
+    min-width: 200px;
   }
 
   &__cancelMoveButton {
