Update styling and UX of move button; EuiToggleButton
- Bring the styling of the button more in line with this comment
  https://github.com/elastic/kibana/pull/70786#issuecomment-654222298

--- a/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
+++ b/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
@@ -49,8 +49,13 @@
     min-width: 200px;
   }
 
-  &__cancelMoveButton {
-    // Ensure that the cancel button is above the drop zones
-    z-index: $cancelButtonZIndex;
+  &__moveButton {
+    &:hover {
+      transform: none !important;
+    }
+    &--cancel {
+      // Ensure that the cancel button is above the drop zones
+      z-index: $cancelButtonZIndex;
+    }
   }
 }
