--- a/src/legacy/ui/public/styles/_mixins.scss
+++ b/src/legacy/ui/public/styles/_mixins.scss
@@ -1,3 +1,27 @@
+@mixin flex-parent($grow: 1, $shrink: 1, $basis: auto, $direction: column) {
+  flex: $grow $shrink $basis;
+  display: flex;
+  flex-direction: $direction;
+
+  > * {
+    flex-shrink: 0;
+  }
+}
+
+// EUITODO: Add this
+@mixin kibanaCircleLogo() {
+  display: inline-block;
+  @include size($euiSizeXXL * 2);
+  line-height: $euiSizeXXL * 2;
+  text-align: center;
+  background-color: $euiColorEmptyShade;
+  border-radius: 100%;
+  padding: $euiSize;
+
+  .euiIcon {
+    vertical-align: baseline;
+  }
+}
 // Standardizes the look and layout of resizable area handles
 @mixin kbnResizer($size: ($euiSizeM + 2px), $direction: horizontal) {
   position: relative;
