--- a/src/plugins/kibana_legacy/public/styles/_base.scss
+++ b/src/plugins/kibana_legacy/public/styles/_base.scss
@@ -48,9 +48,24 @@ input[type='checkbox'],
   overflow: hidden;
 }
 
+.application,
 .app-container {
   > * {
     position: relative;
+  }
+}
+
+.application {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+  flex-direction: column;
+
+  > * {
+    flex-shrink: 0;
   }
 }
 
