--- a/x-pack/plugins/enterprise_search/public/applications/app_search/components/empty_states/empty_states.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/app_search/components/empty_states/empty_states.scss
@@ -8,7 +8,7 @@
  * Empty/Error UI states
  */
 .emptyState {
-  min-height: 450px;
+  min-height: $euiSizeXXL * 11.25;
   display: flex;
   flex-direction: column;
   justify-content: center;
