--- a/x-pack/plugins/canvas/public/components/var_config/var_panel.scss
+++ b/x-pack/plugins/canvas/public/components/var_config/var_panel.scss
@@ -4,8 +4,7 @@
 }
 
 .canvasVarHeader__button {
-  font-size: 16px;
-  line-height: 1.5;
+  @include euiFontSize;
   text-align: left;
 
   width: 100%;
@@ -16,13 +15,13 @@
 }
 
 .canvasVarHeader__iconWrapper {
-  width: 16px;
-  height: 16px;
+  width: $euiSize;
+  height: $euiSize;
 
-  border-radius: 4px;
+  border-radius: $euiBorderRadius;
 
-  margin-right: 8px;
-  margin-left: 4px;
+  margin-right: $euiSizeS;
+  margin-left: $euiSizeXS;
 
   flex-shrink: 0;
 }
