added if badge and fixed the dangling edit tooltip

--- a/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
+++ b/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_processors_editor/components/pipeline_processors_editor_item/pipeline_processors_editor_item.scss
@@ -22,6 +22,10 @@
     box-shadow: none !important;
   }
 
+  &__ifBadge {
+    cursor: pointer;
+  }
+
   &__processorTypeLabel {
     line-height: $euiButtonHeightSmall;
   }
