add some space between name and add/remove button

--- a/src/plugins/discover/public/application/components/sidebar/discover_sidebar.scss
+++ b/src/plugins/discover/public/application/components/sidebar/discover_sidebar.scss
@@ -85,6 +85,7 @@
   margin-left: $euiSizeS;
   flex-grow: 1;
   word-break: break-word;
+  padding-right: $euiSizeXS * 0.25;
 }
 
 .dscSidebarField__fieldIcon {
