one more panel tweak

--- a/x-pack/plugins/canvas/public/components/var_config/var_config.scss
+++ b/x-pack/plugins/canvas/public/components/var_config/var_config.scss
@@ -40,7 +40,7 @@
   position: relative;
 
   transition-property: transform;
-  transition-duration: $euiAnimSpeedFast;
+  transition-duration: $euiAnimSpeedNormal;
   transition-timing-function: $euiAnimSlightResistance;
 
   display: flex;
