--- a/x-pack/plugins/enterprise_search/public/applications/workplace_search/components/shared/loading/loading.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/workplace_search/components/shared/loading/loading.scss
@@ -1,7 +1,6 @@
-// Wrapper for EuiLoadingSpinner
-.app-loading {
+.loadingSpinnerWrapper {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -9,16 +8,7 @@
   align-items: center;
 }
 
-// Shared App Search and Workplace Search branded loading spinner
-.loadingSpinner-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: auto;
-}
-
 .loadingSpinner {
-  width: 50px;
-  height: 50px;
+  width: $euiSizeXXL * 1.25;
+  height: $euiSizeXXL * 1.25;
 }
