--- a/x-pack/plugins/enterprise_search/public/applications/workplace_search/components/overview/recent_activity.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/workplace_search/components/overview/recent_activity.scss
@@ -4,29 +4,38 @@
  * you may not use this file except in compliance with the Elastic License.
  */
 
-.activity-feed {
-  td:last-child {
-    text-align: right;
-  }
-}
-
 .activity {
-  &__error {
-    color: #f95e5b !important;
-    background: #ffefeb;
-    border-bottom-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  padding: $euiSizeM;
+  font-size: $euiFontSizeS;
 
-    a,
-    td {
-      color: #f95e5b;
-      font-weight: 600;
-    }
+  &--error {
+    font-weight: $euiFontWeightSemiBold;
+    color: $euiColorDanger;
+    background: rgba($euiColorDanger, 0.1);
 
-    span {
-      font-weight: 400;
-      border-bottom: 1px solid #f95e5b;
-      margin-left: 14px;
+    &__label {
+      margin-left: $euiSizeS * 1.75;
+      font-weight: $euiFontWeightRegular;
+      text-decoration: underline;
       opacity: 0.7;
+    }
+  }
+
+  &__message {
+    flex-grow: 1;
+  }
+
+  &__date {
+    flex-grow: 0;
+  }
+
+  & + & {
+    border-top: $euiBorderThin;
+
+    &--error {
+      border-color: transparent;
     }
   }
 }
