--- a/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
+++ b/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
@@ -1,3 +1,9 @@
+.dscDiscoverGrid {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .dscTable__footer {
   background-color: $euiColorLightShade;
   padding: $euiSize / 2 $euiSize;
@@ -68,4 +74,8 @@ div[data-rbd-draggable-id='Time'] {
   transition: none;
   -webkit-transition: none;
   -o-transition: none;
+}
+
+.euiDataGrid__verticalScroll {
+  will-change: transform;
 }
