Progress on avoiding nested fields, and starting curated task manager monitoring UI

--- a/x-pack/plugins/monitoring/public/views/kibana/task_manager/index.html
+++ b/x-pack/plugins/monitoring/public/views/kibana/task_manager/index.html
@@ -2,9 +2,9 @@
   product="kibana"
   name="kibana"
   instance="{{ pageData.kibanaSummary.name }}"
-  page="overview"
   resolver="{{ pageData.kibanaSummary.uuid }}"
-  data-test-subj="kibanaInstancePage"
+  page="task_manager"
+  data-test-subj="kibanaInstanceTaskManagerPage"
 >
-  <div id="monitoringKibanaInstanceApp"></div>
+  <div id="monitoringKibanaInstanceTaskManagerApp"></div>
 </monitoring-main>
