--- a/src/plugins/kibana_react/public/page_template/page_template.scss
+++ b/src/plugins/kibana_react/public/page_template/page_template.scss
@@ -1,5 +1,19 @@
+$euiSideNavEmphasizedBackgroundColor: transparentize($euiColorLightShade, .7);
+
 .kbnPageTemplate__pageSideBar {
   padding: $euiSizeL;
+  background:
+    linear-gradient(160deg, $euiSideNavEmphasizedBackgroundColor 0, $euiSideNavEmphasizedBackgroundColor $euiSizeXL, rgba(#FFF, 0) 0),
+    linear-gradient(175deg, $euiSideNavEmphasizedBackgroundColor 0, $euiSideNavEmphasizedBackgroundColor $euiSize, rgba(#FFF, 0) 0);
+}
+
+.kbnPageTemplate__solutionNavTitle {
+  margin-bottom: $euiSizeL;
+}
+
+.kbnPageTemplate__solutionNavTitleIcon {
+  @include euiBottomShadowSmall;
+  margin-right: $euiSize;
 }
 
 @include euiBreakpoint('xs','s') {
@@ -10,6 +24,12 @@
     // TODO: Fix in EUI
     .euiSideNav__mobileToggle {
       height: auto;
+      font-size: $euiFontSizeM;
     }
+  }
+
+  // Rely on the `mobileToggle` of the EuiSideNav component to title the navigation list
+  .kbnPageTemplate__solutionNavTitle {
+    display: none;
   }
 }
