--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/frame_layout.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/frame_layout.scss
@@ -88,6 +88,13 @@ a tilemap in an iframe: https://github.com/elastic/kibana/issues/16457 */
   position: relative;
 }
 
+.lnsFrameLayout-isFullscreen .lnsFrameLayout__sidebar--left,
+.lnsFrameLayout-isFullscreen .lnsFrameLayout__suggestionPanel {
+  // Hide the datapanel and suggestions in fullscreen mode. Using display: none does trigger
+  // a rerender when the container becomes visible again, maybe pushing offscreen is better
+  display: none;
+}
+
 .lnsFrameLayout__sidebar--right {
   flex-basis: 25%;
   background-color: lightOrDarkTheme($euiColorLightestShade, $euiColorInk);
