Show current layer in edit mode in TOC

--- a/x-pack/plugins/maps/public/connected_components/right_side_controls/layer_control/layer_toc/toc_entry/_toc_entry.scss
+++ b/x-pack/plugins/maps/public/connected_components/right_side_controls/layer_control/layer_toc/toc_entry/_toc_entry.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.mapTocEntry-isInEditingMode {
+  background-color: $euiColorLightShade !important;
+  border: 2px dashed $euiColorAccent !important;
+}
+
 .mapTocEntry-isDragging {
   @include euiBottomShadowMedium;
 }
