--- a/x-pack/plugins/ml/public/application/explorer/explorer_charts/_explorer_chart.scss
+++ b/x-pack/plugins/ml/public/application/explorer/explorer_charts/_explorer_chart.scss
@@ -12,6 +12,13 @@
         opacity: 1;
       }
 
+      rect.selected-interval {
+        fill: rgba(200, 200, 200, .1);
+        stroke: $euiColorDarkShade;
+        stroke-width: $euiSizeXS / 2;
+        stroke-opacity: .8;
+      }
+
       rect.scheduled-event-marker {
         stroke-width: 1px;
         stroke: $euiColorLightShade;
