Edit styling adjustments. Add source editable check function. Misc.

--- a/x-pack/plugins/maps/public/connected_components/right_side_controls/layer_control/layer_toc/toc_entry/_toc_entry.scss
+++ b/x-pack/plugins/maps/public/connected_components/right_side_controls/layer_control/layer_toc/toc_entry/_toc_entry.scss
@@ -32,7 +32,7 @@
 
 .mapTocEntry-isInEditingMode {
   background-color: $euiColorLightShade !important;
-  border: 2px dashed $euiColorAccent !important;
+  border: 2px dashed $euiColorDangerText !important;
 }
 
 .mapTocEntry-isDragging {
