adjust border styles to account for docs collapse

--- a/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
+++ b/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
@@ -10,12 +10,17 @@
     flex: 1;
     min-height: 0;
   }
+
+  & > * + * {
+    border-top: $euiBorderThin;
+  }
 }
 
 .lnsFormula__editor {
   border-bottom: $euiBorderThin;
 
   .lnsIndexPatternDimensionEditor-isFullscreen & {
+    border-bottom: none;
     display: flex;
     flex-direction: column;
   }
