--- a/x-pack/plugins/spaces/public/management/edit_space/enabled_features/feature_table.scss
+++ b/x-pack/plugins/spaces/public/management/edit_space/enabled_features/feature_table.scss
@@ -1,4 +1,4 @@
 .spcFeatureTableAccordionContent {
   // Align accordion content with the feature category logo in the accordion's buttonContent
-  padding-left: $euiSizeXL;
+  padding-left: $euiSizeL;
 }
