--- a/x-pack/plugins/spaces/public/share_saved_objects_to_space/components/selectable_spaces_control.scss
+++ b/x-pack/plugins/spaces/public/share_saved_objects_to_space/components/selectable_spaces_control.scss
@@ -1,3 +1,8 @@
 .spcShareToSpace__spacesList {
   margin-top: $euiSizeXS;
 }
+
+.spcShareToSpace__bottomLabel {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
