[ML] Update styling of scheduled events to match and to be visible

--- a/x-pack/plugins/ml/public/application/explorer/explorer_charts/_explorer_chart.scss
+++ b/x-pack/plugins/ml/public/application/explorer/explorer_charts/_explorer_chart.scss
@@ -21,8 +21,8 @@
 
       rect.scheduled-event-marker {
         stroke-width: 1px;
-        stroke: $euiColorLightShade;
-        fill: $euiColorLightestShade;
+        stroke: $euiColorDarkShade;
+        fill: $euiColorLightShade;
         pointer-events: none;
       }
     }
