fix scss imports for rename

--- a/x-pack/plugins/maps/public/connected_components/edit_layer_panel/_index.scss
+++ b/x-pack/plugins/maps/public/connected_components/edit_layer_panel/_index.scss
@@ -1,4 +1,4 @@
-@import 'layer_panel';
+@import 'edit_layer_panel';
 @import 'layer_settings/index';
 @import 'filter_editor/filter_editor';
 @import 'join_editor/resources/join';
