fix form styles to match designs

--- a/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
+++ b/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
@@ -108,19 +108,23 @@
 }
 
 .lnsFormula__docsSidebar {
-  height: 100%;
+  background: $euiColorLightestShade;
+}
+
+.lnsFormula__docsSidebarInner {
+  min-height: 0;
+
+  & > * + * {
+    border-top: $euiBorderThin;
+  }
 }
 
 .lnsFormula__docsSearch {
-  border: none;
-  border-bottom: $euiBorderThin;
-  box-shadow: none;
-  border-radius: 0;
+  padding: $euiSizeS;
 }
 
 .lnsFormula__docsNav {
   @include euiYScroll;
-  background: $euiColorLightestShade;
 }
 
 .lnsFormula__docsNavGroup {
