[Discover] add disabling control columns option, change loading feedback

--- a/src/plugins/discover/public/application/components/context_app/context_app_legacy.scss
+++ b/src/plugins/discover/public/application/components/context_app/context_app_legacy.scss
@@ -13,4 +13,8 @@
 .dscDocsGrid {
   flex: 1 1 100%;
   overflow: auto;
+
+  .euiDataGridRowCell.euiDataGridRowCell--firstColumn {
+    padding: 0;
+  }
 }
