Persist formula on leave, fix fullscreen and popovers

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
@@ -26,10 +26,18 @@
 
 .lnsDimensionContainer__footer {
   padding: $euiSizeS;
+
+  .lnsFrameLayout__sidebar-isFullscreen & {
+    display: none;
+  }
 }
 
 .lnsDimensionContainer__header {
   padding: $euiSizeS $euiSizeXS;
+
+  .lnsFrameLayout__sidebar-isFullscreen & {
+    display: none;
+  }
 }
 
 .lnsDimensionContainer__headerTitle {
