--- a/src/plugins/discover/public/application/components/context_app/context_app_legacy.scss
+++ b/src/plugins/discover/public/application/components/context_app/context_app_legacy.scss
@@ -14,6 +14,10 @@
   flex: 1 1 100%;
   overflow: auto;
 
+  &__cell--highlight {
+    background-color: tintOrShade($euiColorPrimary, 90%, 70%);
+  }
+
   .euiDataGridRowCell.euiDataGridRowCell--firstColumn {
     padding: 0;
   }
