--- a/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
+++ b/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
@@ -66,7 +66,7 @@
   text-align: right;
 }
 
-.euiDataGrid__noResults {
+.euiDataGrid__loading {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -78,10 +78,6 @@
 
 .dscFormatSource {
   @include euiTextTruncate;
-}
-
-.dscDiscoverGrid__cell--highlight {
-  background-color: tintOrShade($euiColorPrimary, 90%, 70%);
 }
 
 .dscDiscoverGrid__descriptionListDescription {
