[ML] Move more files into index_data_visualizer

--- a/x-pack/plugins/file_data_visualizer/public/application/file_data_visualizer/components/_index.scss
+++ b/x-pack/plugins/file_data_visualizer/public/application/file_data_visualizer/components/_index.scss
@@ -3,3 +3,4 @@
 @import 'file_contents/index';
 @import 'import_summary/index';
 @import 'file_data_visualizer_view/index';
+@import 'results_view/index';
