[Discover] support both no results found and loading feedback

--- a/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
+++ b/src/plugins/discover/public/application/components/discover_grid/discover_grid.scss
@@ -66,7 +66,8 @@
   text-align: right;
 }
 
-.euiDataGrid__loading {
+.euiDataGrid__loading,
+.euiDataGrid__noResults {
   display: flex;
   flex-direction: column;
   justify-content: center;
