Move preview on the left and add border

--- a/src/plugins/index_pattern_field_editor/public/components/flyout_panels/flyout_panels.scss
+++ b/src/plugins/index_pattern_field_editor/public/components/flyout_panels/flyout_panels.scss
@@ -7,14 +7,17 @@
   overflow-y: auto;
   padding: $euiSizeL;
 
-  &--lightestShade {
-    background-color: $euiColorLightestShade;
+  &--pageBackground {
+    background-color: $euiPageBackgroundColor;
   }
-  &--lightShade {
-    background-color: $euiColorLightShade;
+  &--emptyShade {
+    background-color: $euiColorEmptyShade;
   }
-  &--mediumShade {
-    background-color: $euiColorMediumShade;
+  &--leftBorder {
+    border-left: $euiBorderThin;
+  }
+  &--rightBorder {
+    border-right: $euiBorderThin;
   }
   &--withFooter {
     height: calc(100% - #{$euiSizeL * 3});
