Error state and text wrapping updates

--- a/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
+++ b/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/formula/editor/formula.scss
@@ -67,6 +67,12 @@
   min-height: 201px;
 }
 
+.lnsFormula__warningText + .lnsFormula__warningText {
+  margin-top: $euiSizeS;
+  border-top: $euiBorderThin;
+  padding-top: $euiSizeS;
+}
+
 .lnsFormula__editorHelp--inline {
   align-items: center;
   display: flex;
