[ML] fix the caret symbol positioning

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/workspace_panel/chart_switch.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/workspace_panel/chart_switch.scss
@@ -5,6 +5,14 @@
   }
 }
 
+.lnsChartSwitch__options {
+  .euiSelectableListItem__append {
+    flex-grow: 1;
+    display: flex;
+    align-items: baseline;
+  }
+}
+
 .lnsChartSwitch__summaryIcon {
   margin-right: $euiSizeS;
   transform: translateY(-1px);
