Fix CrawlerLanding css

--- a/x-pack/plugins/enterprise_search/public/applications/app_search/components/crawler/crawler_landing.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/app_search/components/crawler/crawler_landing.scss
@@ -1,4 +1,4 @@
-.crawler-landing {
+.crawlerLanding {
   &__panel {
     overflow: hidden;
     background-image: url('./assets/bg_crawler_landing.png');
@@ -6,7 +6,9 @@
     background-repeat: no-repeat;
     background-position: right -2rem;
 
-    > div {
+  }
+
+  &__wrapper {
       max-width: 50rem;
     }
   }
