--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/workspace_panel/chart_switch.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/workspace_panel/chart_switch.scss
@@ -7,9 +7,9 @@
 
 .lnsChartSwitch__options {
   .euiSelectableListItem__append {
-    flex-grow: 1;
+    flex: 1 1 0;
     display: flex;
-    align-items: baseline;
+    align-items: center;
   }
 }
 
