[Discover] add initial table improvements

--- a/src/plugins/discover/public/services/doc_views/components/doc_viewer_table/table.scss
+++ b/src/plugins/discover/public/services/doc_views/components/doc_viewer_table/table.scss
@@ -2,10 +2,17 @@
   .euiTableRowCell {
     vertical-align: top;
   }
+}
 
-  tr:first-child th {
-    border-bottom-color: transparent;
-  }
+// needs to remove sorting icon of table column
+.euiTableHeaderCell:nth-child(2) > .euiTableCellContent {
+   .euiIcon {
+     display: none;
+   }
+}
+
+.kbnDocViewer__table {
+  padding-top: $euiSizeM;
 }
 
 .kbnDocViewer__tableRow {
@@ -29,6 +36,9 @@
   &:hover {
     .kbnDocViewer__actionButton {
       opacity: 1;
+    }
+    .kbnDocViewer__tableFieldNameCell {
+      cursor: pointer;
     }
   }
 
