Styles the tables in the accordion list.

--- a/x-pack/plugins/enterprise_search/public/applications/app_search/components/crawler/components/crawl_details_flyout/accordion_list.scss
+++ b/x-pack/plugins/enterprise_search/public/applications/app_search/components/crawler/components/crawl_details_flyout/accordion_list.scss
@@ -3,3 +3,11 @@
   border-radius: $euiBorderRadius;
   padding: $euiSizeM;
 }
+
+.appSearchAccordion--bordered, .appSearchAccordion {
+  .euiBasicTable {
+    .euiTableRow > .euiTableRowCell {
+      border-bottom: none;
+    }
+  }
+}
