:lipstick: Fix mobile layout

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
@@ -16,6 +16,7 @@
 
   @include euiBreakpoint('xs', 's', 'm') {
     @include euiFlyout;
+    left: 10vw;
   }
 
   .lnsFrameLayout__sidebar-isFullscreen & {
