:lipstick: Make searchbar go below flyout

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/config_panel/dimension_container.scss
@@ -17,6 +17,7 @@
   @include euiBreakpoint('xs', 's', 'm') {
     @include euiFlyout;
     left: 10vw;
+    z-index: $euiZContentMenu;
   }
 
   .lnsFrameLayout__sidebar-isFullscreen & {
