Discard changes modal and go back to TSVB

--- a/x-pack/plugins/lens/public/app_plugin/app.scss
+++ b/x-pack/plugins/lens/public/app_plugin/app.scss
@@ -38,3 +38,7 @@
     fill: makeGraphicContrastColor($euiColorVis0, $euiColorDarkShade);
   }
 }
+
+.lnsApp__originatingAppBackModal {
+  width: 500px;
+}
