added base popover

--- a/src/plugins/discover/public/application/main/components/sidebar/discover_sidebar.scss
+++ b/src/plugins/discover/public/application/main/components/sidebar/discover_sidebar.scss
@@ -74,3 +74,13 @@
 .dscSidebar__indexPatternSwitcher {
   min-width: 0;
 }
+
+.dscLearnBtn {
+  .euiButtonContent {
+    justify-content: normal;
+  }
+}
+
+.dscLearnCallout {
+  padding: $euiSizeXS !important;
+}
